# AutonomousCoffeeMachine

./: README.md
pico_coffee_machine_control/: CMakeLists.txt  known_potential_problems.txt
pico_coffee_machine_control/lib/: machine_controller.h  modbus_server.h  registers.h
pico_coffee_machine_control/pio/: reg_handler.pio  spi_recv.pio
pico_coffee_machine_control/src/: machine_controller.c  modbus_server.c
pico_coffee_machine_emulator/: CMakeLists.txt
pico_coffee_machine_emulator/lib/: machine_simulator.h  modbus_master.h
pico_coffee_machine_emulator/src/: machine_simulator.c  modbus_master.c
rpi4_coffee_machine_controller/: Database.json  DatabaseRecord.cs  DisplayRecord.cs  MachineController.cs  PicoController.cs  PicoRegisters.cs  Program.cs  README.md  database1.json.rec  dependencies.txt  rpi4_coffee_machine_controller.csproj  rpi4_coffee_machine_controller.sln
rpi4_cup_fetcher_controller/: NHduinoController.cs  NHduinoController.cs.unused  NHduinoRegisters.cs.unused  Program.cs  README.md  rpi4_cup_fetcher_controller.sln
rpi4_hmi/: App.axaml  App.axaml.cs  Controller.cs  Program.cs  README.md  ViewLocator.cs  app.manifest  dependencies.txt  readme.txt  rpi4_hmi.csproj  rpi4_hmi.sln
rpi4_hmi/ViewModels/: ErrorWindowViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
rpi4_hmi/Views/: ErrorWindow.axaml  ErrorWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
